# flux-sdk

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  flux_sdk_init.cmake  flux_sdk_version.cmake  install-libs.bat  install-libs.sh  library-list.txt  library.json  library.properties
config/: flux_board_config.h.in  flux_config.h.in
docs/: act_sysfirmware.md  ar_autoload.md  build_with_flux.md  dev_developing.md  device_writing.md  devices.md  flux.dox  flux_architecture.md  flux_developing.md  flux_using.md  flux_using_esp32.md  flux_using_iot.md  iot_arduino.md  iot_aws.md  iot_azure.md  iot_http.md  iot_mqtt.md  iot_thingspeak.md  iot_thinkspeak.md  parameters.md  properties.md
src/: CMakeLists.txt  Flux.h  Spark.h
src/Flux/: flxBusI2C.cpp  (+176 more)
src/platform/: CMakeLists.txt
src/platform/platform_esp32/: CMakeLists.txt
src/platform/platform_esp32/flux_base/: flxPlatform.cpp
src/platform/platform_esp32/flux_firmware/: flxSysFirmware.cpp  flxSysFirmware.h
src/platform/platform_esp32/flux_ntp/: CMakeLists.txt  flxNTPESP32.cpp  flxNTPESP32.h
src/platform/platform_esp32/flux_prefs/: CMakeLists.txt  flxStorageESP32Pref.cpp  flxStorageESP32Pref.h
src/platform/platform_esp32/flux_wifi/: CMakeLists.txt  flxWiFiESP32.cpp  flxWiFiESP32.h
src/platform/platform_esp32/iot_mqtt/: CMakeLists.txt  flxMQTTESP32.h
src/platform/platform_rpi/flux_base/: CMakeLists.txt  flxPlatform.cpp
src/platform/platform_rpi/flux_firmware/: flxSysFirmware.cpp  flxSysFirmware.h
src/platform/platform_rpi/flux_prefs/: CMakeLists.txt  flxKVPStoreDeviceRP2.cpp  flxKVPStoreDeviceRP2.h
(+581 files in other folders)
